[gd_scene load_steps=7 format=2]

[ext_resource path="res://herramientas/diario/VistaDiario.gd" type="Script" id=1]
[ext_resource path="res://herramientas/diario/VistaDiarioPagina.gd" type="Script" id=2]
[ext_resource path="res://assets/images/FondoDiario.png" type="Texture" id=3]
[ext_resource path="res://assets/images/flatLight/flatLight22.png" type="Texture" id=4]
[ext_resource path="res://assets/images/flatLight/flatLight33.png" type="Texture" id=5]
[ext_resource path="res://assets/images/flatLight/flatLight23.png" type="Texture" id=6]

[node name="VistaDiario" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FondoDiario" type="Sprite" parent="."]
position = Vector2( 516.928, 270.857 )
scale = Vector2( 0.73244, 0.73244 )
texture = ExtResource( 3 )

[node name="izquierda" type="VBoxContainer" parent="."]
margin_left = 238.745
margin_top = 117.254
margin_right = 441.745
margin_bottom = 394.254
rect_scale = Vector2( 1.2, 1.06 )
custom_constants/separation = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="izquierda"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_right = 203.0
margin_bottom = 14.0
custom_constants/line_spacing = 4
text = "Primera linea"

[node name="Label2" type="Label" parent="izquierda"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_top = 18.0
margin_right = 203.0
margin_bottom = 50.0
custom_constants/line_spacing = 4
text = "Segunda linea
Tercera Linea"

[node name="Label3" type="Label" parent="izquierda"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_top = 54.0
margin_right = 203.0
margin_bottom = 68.0
custom_constants/line_spacing = 4
text = "Cuarta linea"

[node name="Label4" type="Label" parent="izquierda"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_top = 72.0
margin_right = 203.0
margin_bottom = 122.0
custom_constants/line_spacing = 4
text = "Quinta linea
Sexta linea
Septima linea"

[node name="Label5" type="Label" parent="izquierda"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_top = 126.0
margin_right = 203.0
margin_bottom = 140.0
custom_constants/line_spacing = 4
text = "Octava linea"

[node name="Label8" type="Label" parent="izquierda"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_top = 144.0
margin_right = 203.0
margin_bottom = 158.0
custom_constants/line_spacing = 4
text = "De arriba ahora!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="izquierda"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_top = 162.0
margin_right = 203.0
margin_bottom = 176.0
custom_constants/line_spacing = 4
text = "Primera linea"

[node name="Label7" type="Label" parent="izquierda"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_top = 180.0
margin_right = 203.0
margin_bottom = 212.0
custom_constants/line_spacing = 4
text = "Segunda linea
Tercera Linea"

[node name="Label9" type="Label" parent="izquierda"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_top = 216.0
margin_right = 203.0
margin_bottom = 284.0
custom_constants/line_spacing = 4
text = "Bueno, queda bastante chevere
el tema de las entradas de dia-
rio usando la libreria de UI que
trae."

[node name="derecha" type="VBoxContainer" parent="."]
margin_left = 552.701
margin_top = 116.547
margin_right = 755.701
margin_bottom = 393.547
rect_scale = Vector2( 1.2, 1.06 )
custom_constants/separation = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="derecha"]
modulate = Color( 0.12549, 0.152941, 0.4, 1 )
margin_right = 227.0
margin_bottom = 284.0
custom_constants/line_spacing = 4
text = "Acá lo mismo...

Se puede escribir directamente
texto multilinea pero el
inconveniente es que hay que
conocer a prepo la cantidad de
lineas que ocupa una entrada.

Por eso se deshabilitó el auto-
wrap. Sin embargo, ahora uno
está atado a saber cuantos 
caracteres entran en una sola linea.



                                             :'("

[node name="botones" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cerrar_diario" type="TextureButton" parent="botones"]
margin_left = 49.0
margin_top = 34.0
margin_right = 97.0
margin_bottom = 82.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anterior_pagina" type="TextureButton" parent="botones"]
margin_left = 113.0
margin_top = 405.0
margin_right = 193.0
margin_bottom = 485.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="siguiente_pagina" type="TextureButton" parent="botones"]
margin_left = 841.0
margin_top = 406.0
margin_right = 921.0
margin_bottom = 486.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="botones/cerrar_diario" to="." method="_on_cerrar_diario_pressed"]
[connection signal="pressed" from="botones/anterior_pagina" to="." method="_on_anterior_pagina_pressed"]
[connection signal="pressed" from="botones/siguiente_pagina" to="." method="_on_siguiente_pagina_pressed"]
